<resources>
    <string name="app_name">Practice13</string>
    <string name="kurs">Введите курс обмена $</string>
    <string name="summa">Введите сумму</string>
    <string name="result">Результат:</string>
    <string name="summ_dol">Сумма в долларах</string>
    <string name="dol_rub">USD = RUB</string>
    <string name="change">Конвертировать</string>
    <string name="toast1">Введите курс обмена!</string>
    <string name="toast2">Введите сумму для обмена!</string>
</resources>